Reduced transform down on .card & .cardLarge hover due to overlap of the cards. That is fixed now

--- a/src/styles/Orderfoodhomepagecss/Content.module.css
+++ b/src/styles/Orderfoodhomepagecss/Content.module.css
@@ -62,7 +62,7 @@
 
 .card:hover,
 .cardLarge:hover {
-      transform: scale(1.04);
+      transform: scale(1.01);
       color: rgb(0, 13, 255);
 }
 
